# Art-Style-Recognition-with-EfficientNetB0

./: .replit  README.md  VSCode.md  app.py  create_dataset.py  main.py  pyproject.toml
models/: class_names.json
